cambie el color de la bandera de laos

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {background-color: darkgrey;}
 	margin: 20px;
 }
 .laosA {
-	background-color: darkred;
+	background-color: mistyrose;
 	height: 25%;
 } 
 
